--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     <script type="module" src="/src/main.jsx"></script>
 
     <!-- Vendor JS (for animations, carousel, bootstrap, etc.) -->
-    <script src="./public/vendor/jquery/jquery.min.js"></script>
-    <script src="./public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="./public/assets/js/owl-carousel.js"></script>
+    <script type="module" src="./public/vendor/jquery/jquery.min.js"></script>
+    <script type="module" src="./public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./public/assets/js/owl-carousel.js"></script>
 
     <!-- These scripts often control preloader, comment out to disable loading screen -->
     <!-- <script src="/assets/js/animation.js"></script> -->
-    <script src="./public/assets/js/imagesloaded.js"></script>
+    <script type="module" src="./public/assets/js/imagesloaded.js"></script>
     <!-- <script src="/assets/js/custom.js"></script> -->
+    <script type="module" src="./public/vendor/jquery/jquery.min.js"></script>
+    <script type="module" src="./public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./public/assets/js/owl-carousel.js"></script>
+    <script type="module" src="./public/assets/js/animation.js"></script>
+    <script type="module" src="./public/assets/js/imagesloaded.js"></script>
+    <script type="module" src="./public/assets/js/popup.js"></script>
+    <script type="module" src="./public/assets/js/custom.js"></script>
   </body>
 
-  <script src="./public/vendor/jquery/jquery.min.js"></script>
-  <script src="./public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./public/assets/js/owl-carousel.js"></script>
-  <script src="./public/assets/js/animation.js"></script>
-  <script src="./public/assets/js/imagesloaded.js"></script>
-  <script src="./public/assets/js/popup.js"></script>
-  <script src="./public/assets/js/custom.js"></script>
 </html>
